# perfetto

./: .clang-tidy  .gitignore  .travis.yml  Android.bp  Android.bp.after  Android.bp.extras  AndroidTest.xml  BUILD  BUILD.gn  PRESUBMIT.py  README.md  TEST_MAPPING  `!  battery_dump.cc  bug.sql  build_flamegraphs.py  dropbox_leak.cc  experiment.sh  fifoclient.cc  fifoserver.cc  foo.descriptor  ftrace.cfg  ftrace_cfg.protobuf  generate_stats.py  groups  heapprofd.cc  heapprofd.rc  iorap_example.cc  perfetto.rc  profhd.cc  project.config  proto_compat_test.cc  read_mem_client.cc  read_mem_serv.cc  reflection_test.cc  run_ftrace_tester.py  test.cc  test.html  testasync.cc  trace.txt  (+2 more)
gn/standalone/: BUILD.gn  BUILDCONFIG.gn  android.gni  build_tool_wrapper.py  check_buildtool_exists.py  fuzzer.gni  glob.py  linker_version_script.map  proto_library.gni  wasm.gni  wasm_typescript_declaration.d.ts
protos/: BUILD.gn  README.md  trace_packet.proto
protos/ftrace/: BUILD.gn  all_protos.gni  ftrace_event.proto  print.proto
protos/tracing_service/: BUILD.gn  consumer_port.proto  data_source_config.proto  data_source_descriptor.proto  producer_port.proto  trace_config.proto
src/filesystem/: BUILD.gn  inode.cc  inode.h  inode_unittest.cc
src/ftrace_reader/: BUILD.gn  atrace_wrapper.cc  atrace_wrapper.h  cpu_reader.cc  cpu_reader.h  cpu_reader_benchmark.cc  cpu_reader_fuzzer.cc  cpu_reader_unittest.cc  cpu_stats_parser.cc  cpu_stats_parser.h  cpu_stats_parser_unittest.cc  end_to_end_integrationtest.cc  event_info.cc  event_info.h  event_info_constants.cc  event_info_constants.h  event_info_unittest.cc  format_parser.cc  format_parser_unittest.cc  ftrace_config_muxer.cc  ftrace_config_muxer.h  ftrace_config_muxer_unittest.cc  ftrace_config_unittest.cc  ftrace_controller.cc  ftrace_controller_unittest.cc  ftrace_model.cc  ftrace_model.h  ftrace_model_unittest.cc  ftrace_procfs.cc  ftrace_procfs.h  ftrace_procfs_integrationtest.cc  ftrace_procfs_unittest.cc  ftrace_to_proto.cc  proto_translation_table.cc  proto_translation_table.h  proto_translation_table_unittest.cc  system_wrapper.cc  system_wrapper.h
src/ipc/: BUILD.gn  buffered_frame_deserializer.cc  buffered_frame_deserializer.h  buffered_frame_deserializer_fuzzer.cc  buffered_frame_deserializer_unittest.cc  client_impl.cc  client_impl.h  client_impl_unittest.cc  deferred.cc  deferred_unittest.cc  host_impl.cc  host_impl.h  host_impl_unittest.cc  ipc_library.gni  service_proxy.cc  unix_socket.cc  unix_socket.h  unix_socket_unittest.cc  virtual_destructors.cc  wire_protocol.proto
src/perfetto_cmd/: BUILD.gn  activate_triggers.cc  activate_triggers.h  config.cc  config.h  config_unittest.cc  descriptor.proto  pbtxt_to_pb.cc  pbtxt_to_pb.h  pbtxt_to_pb_unittest.cc  perfetto_cmd.cc  perfetto_cmd.h  perfetto_cmd_state.proto  perfetto_cmd_unittest.cc  perfetto_config.descriptor.h  rate_limiter.cc  rate_limiter.h  rate_limiter_unittest.cc  trigger_producer.cc  trigger_producer.h
src/protozero/: BUILD.gn  message.cc  message_handle.cc  message_handle_unittest.cc  message_unittest.cc  proto_decoder.cc  proto_decoder_fuzzer.cc  proto_decoder_unittest.cc  proto_utils.cc  proto_utils_unittest.cc  protozero_library.gni  protozero_message.cc  protozero_message_handle.cc  protozero_message_handle_unittest.cc  protozero_message_unittest.cc  scattered_heap_buffer.cc  scattered_stream_memory_delegate.cc  scattered_stream_memory_delegate.h  scattered_stream_null_delegate.cc  scattered_stream_writer.cc  scattered_stream_writer_unittest.cc
src/sandbox/: BUILD.gn  bpf_sandbox.cc  bpf_sandbox.h  bpf_sandbox_unittest.cc
src/trace_processor/: BUILD.gn  all_events_args_table.cc  all_events_args_table.h  all_events_table.cc  all_events_table.h  android_logs_table.cc  android_logs_table.h  args_table.cc  args_table.h  args_tracker.cc  args_tracker.h  async_slice_table.cc  async_slice_table.h  blob_reader.h  chunk_reader.h  chunked_trace_reader.h  clock_tracker.cc  clock_tracker.h  clock_tracker_unittest.cc  columnar_trace.cc  columnar_trace.h  columnar_trace_unittest.cc  counter_definitions_table.cc  counter_definitions_table.h  counter_values_table.cc  counter_values_table.h  counters_table.cc  counters_table.h  counters_table_unittest.cc  db.cc  event_tracker.cc  event_tracker.h  event_tracker_unittest.cc  file_reader.cc  filtered_row_index.cc  filtered_row_index.h  filtered_row_index_unittest.cc  ftrace_descriptors.cc  ftrace_descriptors.h  ftrace_utils.cc  (+129 more)
test/: AndroidTest.xml  BUILD.gn  alignment_trap.cc  end_to_end_benchmark.cc  end_to_end_integrationtest.cc  end_to_end_integrationtest.h  end_to_end_integrationtest_cts.cc  end_to_end_shared_memory_fuzzer.cc  fake_consumer.cc  fake_consumer.h  fake_producer.cc  fake_producer.h  ftrace_tester.cc  task_runner_thread.cc  task_runner_thread.h  task_runner_thread_delegates.h  test_helper.cc  test_helper.h
test/configs/: BUILD.gn  android_log.cfg  atrace.cfg  ftrace.cfg  heapprofd.cfg  logcat.cfg  long_trace.cfg  processes.cfg  summary.cfg  template.cfg  test.cfg
test/cts/: Android.bp  README.md  end_to_end_integrationtest_cts.cc  heapprofd_test_cts.cc
test/trace_processor/: android_log_counts.out  android_log_counts.sql  android_log_msgs.out  android_log_msgs.sql  android_sched_and_ps_b119301023.out  android_sched_and_ps_smoke.out  android_sched_and_ps_stats.out  b120487929.sql  counter_args_join.sql  index  memory_counters_b120605557.out  memory_counters_counter_args_join.out  memory_counters_smoke_args.out  power_rails_power_rails.out  sfgate_smoke_slices.out  slice_span_join_b118665515.sql  span_left_join.out  span_left_join.sql  synth_1.pbtxt  synth_1.py  synth_1_filter_counters.out  synth_1_smoke.out  synth_common.py  synth_process_tracking.py  (+2 more)
ui/: .prettierrc  BUILD.gn  PRESUBMIT.py  README.md  bs-config.js  deploy  fonts.css  gen  google.tslint.json  index.html  lib.js  main.ts  overview-timeline.ts  package-lock.json  package.json  perfetto.css  rollup.config.js  run-dev-server  trace_processor.js  trace_processor.ts  tsconfig.json  tslint.json  typescript.gni  worker.js  worker.ts
(+1318 files in other folders)
