# Copyright (C) 2018 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

source_set("end_to_end_integrationtests") {
  testonly = true
  deps = [
    ":fake_consumer",
    "../gn:default_deps",
    "../gn:gtest_deps",
    "../src/traced/probes:ftrace_producer",
    "../src/tracing:ipc",
  ]
  sources = [
    "end_to_end_integrationtest.cc",
  ]
}

source_set("fake_consumer") {
  testonly = true
  public_deps = [
    "../include/perfetto/tracing/core",
    "../protos:lite",
  ]
  deps = [
    "../gn:default_deps",
    "../gn:gtest_deps",
    "../protos:zero",
    "../src/base:test_support",
  ]
  sources = [
    "fake_consumer.cc",
    "fake_consumer.h",
  ]
}

source_set("fake_producer") {
  testonly = true
  public_deps = [
    "../include/perfetto/tracing/core",
  ]
  deps = [
    "../gn:default_deps",
    "../gn:gtest_deps",
    "../protos:zero",
  ]
  sources = [
    "fake_producer.cc",
    "fake_producer.h",
  ]
}
