# Copyright (C) 2018 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

source_set("perfetto_cmd") {
  public_deps = [
    "../../include/perfetto/traced",
    "../../protos/perfetto/perfetto_cmd",
  ]
  deps = [
    "../../gn:default_deps",
    "../../protos/perfetto/config",
    "../base",
    "../protozero",
    "../tracing:ipc_consumer",
  ]
  sources = [
    "perfetto_cmd.cc",
    "perfetto_cmd.h",
  ]
}

source_set("perfetto_cmd_unittests") {
  testonly = true
  public_deps = []
  deps = [
    ":perfetto_cmd",
    "../../gn:default_deps",
    "../../gn:gtest_deps",
  ]
  sources = [
    "perfetto_cmd_unittest.cc",
  ]
}
