# Copyright (C) 2017 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (is_linux || is_android) {
  source_set("sandbox") {
    deps = [
      "../../gn:default_deps",
      "../base",
    ]
    sources = [
      "bpf_sandbox.cc",
      "bpf_sandbox.h",
    ]
  }

  source_set("sandbox_unittests") {
    testonly = true
    deps = [
      ":sandbox",
      "../../gn:default_deps",
      "../../gn:gtest_deps",
      "../base",
    ]
    sources = [
      "bpf_sandbox_unittest.cc",
    ]
  }
}
